--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
             <div>
                 <div class="right">
                     <h1>facebook</h1>
+                    <h1>facebook</h1>
                 </div>
                 <div>
                     <p>
