addeded the description

--- a/login.html
+++ b/login.html
@@ -17,6 +17,9 @@
                     <p>
                         Facebook helps you connect and share with the people in your life.
                     </p>
+                    <p>
+                        Facebook helps you connect and share with the people in your life.
+                    </p>
                 </div>
             </div>
             <div  class="left">
